# drf_coursework

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
habit/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py  0003_remove_habit_time_complete_habit_duration_and_more.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
